# vlm_monitor

./: .gitignore  README.md  STARTUP_GUIDE.md  config.json  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  start_services_final.sh  start_system.py  start_system.sh  stop_all_services.sh  test_mjpeg.html  test_mjpeg_stream.py  test_realtime_display.py  test_status_display.html  test_stream_performance.py  test_user_question_fix.py
backend/: app.py  requirements.txt
docs/: ASR_USAGE.md  ASYNC_PROCESSOR_ARCHITECTURE.md  CODE_STRUCTURE_OPTIMIZATION.md  EXPERIMENT_IMPROVEMENTS_SUMMARY.md  FRAME_SAMPLING_REPORT.md  README.md  README_MAIN.md  README_TCP_SERVICE.md  REFACTORING_SUMMARY.md  RTSP_VLM_Integration_Design.md  SETUP_PROBLEM_ANALYSIS_REPORT.md  SYNC_INFERENCE_MODE.md  SYSTEM_ARCHITECTURE.md  TTS_IMPLEMENTATION_SUMMARY.md  TTS_SERVICE.md  backend_video_client_architecture.md  camera_control_integration.md  start_system_usage.md
docs/notepads/: sync_mode.md  updates.md
examples/: camera_control_example.py
frontend/: README.md  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: InferencePlayer.vue  LiveVideoPlayer.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts  websocket.ts
frontend/src/stores/: monitor.ts
frontend/src/types/: index.ts
frontend/src/views/: MonitorView.vue
mcp/: .gitignore  CAMERA_SERVER_OPTIMIZATION.md  IMPLEMENTATION_SUMMARY.md  README.md  README_PACKAGE.md  camera_client.py  config.json  pyproject.toml  start_camera_system.py  test_camera_logging.py  test_mcp_package.py  test_optimized_camera_server.py
mcp/docs/: README.md
mcp/src/camera_mcp/: __init__.py  camera_client.py  camera_server.py  cli.py
mcp/src/camera_mcp/cores/: camera_client.py  camera_inference_service.py  camera_server.py
mcp/src/camera_mcp/prompts/: __init__.py  prompt.py
mcp/src/camera_mcp/utils/: Camera.py  __init__.py  test.py
mcp/tests/: __init__.py  test_integrated_system.py  test_mcp_system.py
src/monitor/: dashscope_vlm_client.py  main.py  qwen_vl_client.py
src/monitor/core/: config.py
src/monitor/rtsp/: rtsp_client.py  rtsp_server.py  rtsp_utils.py
src/monitor/tcp/: __init__.py  tcp_client.py  tcp_utils.py  tcp_video_server.py
src/monitor/utils/: image_utils.py  test_utils.py
src/monitor/vlm/: async_video_processor.py  backend_video_client.py  dashscope_vlm_client.py  user_question_manager.py  vlm_client.py
tests/: performance_test.py  split_video.py  test_api_simple.py  test_camera_fps.py  test_camera_fps_forced.py  test_config_loading.py  test_dashscope_vlm.py  test_inference_api.py  test_main.py  test_main_functionality.py  test_processor_initialization.py  test_rtsp_integration.py  test_rtsp_vlm_integration.py  test_rtsp_vlm_simple.py  test_tcp_client.py  test_tcp_client_origin.py  test_tcp_client_orin.py  test_tcp_fps_detection.py  test_tcp_performance.py  test_tcp_service.py  test_tcp_vlm_simple.py  test_websocket.py
tests/tcp_stream_analysis/: README.md  run_tcp_analysis.py  test_improved_tcp_client.py  test_tcp_stream_info.py
tests/tcp_stream_analysis/improved_client_results/: tcp_client_test_20250530_121104.json
tests/tcp_stream_analysis/tcp_analysis_results/: tcp_stream_analysis_20250530_120128.json  tcp_stream_report_20250530_120128.txt
tools/: asr_server.py  diagnose_mcp_service.py  example_usage.md  find_inference_results_with_response.py  inference_results_with_response_session_20250612_144126.json  inference_results_with_response_session_20250612_161407.json  inference_results_with_response_session_20250613_074137.json  inference_results_with_response_session_all.json  organize_experiment_directories.py  quick_find_responses.py  start_tcp_service.sh  tcp_video_service.py  test_asr_client.py  test_complete_mcp_integration.py  test_conversation_history.py  test_mcp_result_saving.py  test_parallel_mcp_vlm.py  test_parallel_optimization.py  test_question_assignment.py  test_sync_inference_mode.py  test_task_coordination.py  test_tts_service.py  test_user_question_blocking_fix.py  test_user_question_frame_timing.py  test_user_question_interrupt.py  test_user_question_optimization.py  test_user_question_proactive_monitor.py  tts_service.py  view_mcp_logs.py
