[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monitor"
version = "0.1.0"
description = "VLM视频监控系统 - 支持RTSP和TCP流媒体的智能视频分析"
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.20.0",
    "openai>=1.0.0",
]

[project.scripts]
vlm-monitor = "monitor.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pylsp-mypy]
enabled = true
live_mode = true

[tool.pyright]
pythonPath = "/home/fze/envs/py310/bin/python"
include = ["src", "tests"]
exclude = ["**/__pycache__"]
reportMissingImports = "warning"
reportMissingTypeStubs = false
typeCheckingMode = "basic"

[tool.pylance]
extraPaths = ["./src"] 